--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GDL2746PEE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GDL2746PEE');
+</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Emmanuel de Bézenac</title>
@@ -382,7 +391,7 @@
 
 <header class="hero">
   <h1>Emmanuel<br>de Bézenac</h1>
-  <p class="tagline">Permanent researcher at INRIA Paris, working on deep learning for physical systems, generative models, and weather forecasting.</p>
+  <p class="tagline">Permanent researcher at INRIA Paris, working on deep learning for weather forecasting and generative models.</p>
   <div class="hero-meta">
     <a href="https://team.inria.fr/arches/" target="_blank">ARCHES</a>
     <span class="sep">·</span>
@@ -424,7 +433,6 @@
     <span>Generative Models</span>
     <span>Neural PDE Solvers</span>
     <span>Physics-Informed ML</span>
-    <span>Dynamical Systems</span>
   </div>
 </section>
 
