Fix link to Claire Monteleoni's profile

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
   <p>
     I am a permanent researcher (ISFP) at INRIA Paris in the
     <a href="https://team.inria.fr/arches/" target="_blank">ARCHES</a> team,
-    led by <a href="https://project.inria.fr/arches/claire-monteleoni/" target="_blank">Claire Monteleoni</a>.
+    led by <a href="https://team.inria.fr/arches/claire-monteleoni/" target="_blank">Claire Monteleoni</a>.
   </p>
   <p>
     My current work focuses on building AI weather forecasting models. I am also broadly interested
